# bg

./: CMakeLists.txt  README.md  bg_analytics.c  bg_analytics.h
include/bg/: analytics.h
scripts/: amalgamate.cmake
src/ann/: ann.c  ann.h  array.h  list.h  vector.c  vector.h
src/bg/: Collection.c  Collection.h  Document.c  Document.h  State.c  State.h  StringStream.c  StringStream.h
src/example/: main.c
src/http/: http.c  http.h
src/palloc/: palloc.c  palloc.h  sstream.c  sstream.h  vector.c  vector.h
